ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: k8s.wcdi.tech
      http:
        paths:
          - path: /app1(/|$)(.*)
            backend:
              serviceName: php-apache
              servicePort: 8080
          - path: /app2(/|$)(.*)
            backend:
              serviceName: nginx
              servicePort: 9080
